// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`session email templates renders client_session_confirmed with video call access only when confirmed and available 1`] = `
{
  "event": "session_confirmed",
  "html": "
    <!doctype html>
    <html lang="es">
      <head>
        <meta charset="utf-8" />
        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
        <title>Tu cita ya está confirmada</title>
      </head>
      <body style="margin: 0; padding: 0; background: #F5F7F5; font-family: Arial, Helvetica, sans-serif; color: #2C3E2C;">
        <div style="display: none; max-height: 0; overflow: hidden; opacity: 0;">
          Tu cita ya está confirmada · domingo, 10 de mayo de 2026
        </div>

        <table role="presentation" width="100%" cellspacing="0" cellpadding="0" style="background: #F5F7F5; padding: 24px 12px;">
          <tr>
            <td align="center">
              <table role="presentation" width="100%" cellspacing="0" cellpadding="0" style="max-width: 640px;">
                <tr>
                  <td style="padding-bottom: 14px; color: #9BA89B; font-size: 12px; letter-spacing: 0.8px; text-transform: uppercase;">
                    HERA
                  </td>
                </tr>
                <tr>
                  <td style="background: #FFFFFF; border: 1px solid #E2E8E2; border-radius: 24px; padding: 28px;">
                    <div style="display: inline-block; padding: 6px 12px; border-radius: 999px; background: #D4DED0; color: #8B9D83; font-size: 12px; font-weight: 700; letter-spacing: 0.3px;">
                      Cita confirmada
                    </div>

                    <h1 style="margin: 18px 0 10px; font-size: 30px; line-height: 1.2; color: #2C3E2C;">
                      Tu cita ya está confirmada
                    </h1>

                    <p style="margin: 0 0 18px; font-size: 15px; line-height: 1.7; color: #6B7B6B;">
                      Dra. Elena Martín ha confirmado tu cita. Aquí tienes el resumen actualizado para que llegues con todo claro.
                    </p>

                    <div style="display: inline-block; margin-bottom: 22px; padding: 8px 14px; border-radius: 999px; background: #F0F7F0; color: #7BA377; border: 1px solid #7BA377; font-size: 13px; font-weight: 700;">
                      Confirmada
                    </div>

                    <div style="border: 1px solid #E2E8E2; border-radius: 18px; background: #FCFDFC; padding: 18px 20px;">
                      <table role="presentation" width="100%" cellspacing="0" cellpadding="0">
                        
        <tr>
          <td style="padding: 10px 0; color: #6B7B6B; font-size: 13px; width: 34%; vertical-align: top;">
            Especialista
          </td>
          <td style="padding: 10px 0; color: #2C3E2C; font-size: 14px; font-weight: 600; vertical-align: top;">
            Dra. Elena Martín
          </td>
        </tr>
      
        <tr>
          <td style="padding: 10px 0; color: #6B7B6B; font-size: 13px; width: 34%; vertical-align: top;">
            Fecha
          </td>
          <td style="padding: 10px 0; color: #2C3E2C; font-size: 14px; font-weight: 600; vertical-align: top;">
            domingo, 10 de mayo de 2026
          </td>
        </tr>
      
        <tr>
          <td style="padding: 10px 0; color: #6B7B6B; font-size: 13px; width: 34%; vertical-align: top;">
            Hora
          </td>
          <td style="padding: 10px 0; color: #2C3E2C; font-size: 14px; font-weight: 600; vertical-align: top;">
            11:30
          </td>
        </tr>
      
        <tr>
          <td style="padding: 10px 0; color: #6B7B6B; font-size: 13px; width: 34%; vertical-align: top;">
            Duración
          </td>
          <td style="padding: 10px 0; color: #2C3E2C; font-size: 14px; font-weight: 600; vertical-align: top;">
            60 minutos
          </td>
        </tr>
      
        <tr>
          <td style="padding: 10px 0; color: #6B7B6B; font-size: 13px; width: 34%; vertical-align: top;">
            Modalidad
          </td>
          <td style="padding: 10px 0; color: #2C3E2C; font-size: 14px; font-weight: 600; vertical-align: top;">
            Videollamada
          </td>
        </tr>
      
        <tr>
          <td style="padding: 10px 0; color: #6B7B6B; font-size: 13px; width: 34%; vertical-align: top;">
            Estado
          </td>
          <td style="padding: 10px 0; color: #2C3E2C; font-size: 14px; font-weight: 600; vertical-align: top;">
            Confirmada
          </td>
        </tr>
      
        <tr>
          <td style="padding: 10px 0; color: #6B7B6B; font-size: 13px; width: 34%; vertical-align: top;">
            Zona horaria
          </td>
          <td style="padding: 10px 0; color: #2C3E2C; font-size: 14px; font-weight: 600; vertical-align: top;">
            Europe/Madrid
          </td>
        </tr>
      
                      </table>
                    </div>

                    <div style="margin-top: 24px;">
                      <a
                        href="https://www.health-hera.com/sessions/session-123"
                        style="display: inline-block; background: #8B9D83; color: #FFFFFF; padding: 14px 20px; border-radius: 999px; font-size: 14px; font-weight: 700; text-decoration: none;"
                      >
                        Ver detalles de la cita
                      </a>
                    </div>

                    
    <div style="margin-top: 18px;">
      
            <a
              href="https://meet.hera.app/session-123"
              style="display: inline-block; margin-right: 12px; margin-bottom: 10px; color: #B8A8D9; font-size: 13px; font-weight: 600; text-decoration: none;"
            >
              Abrir videollamada
            </a>
          
    </div>
  

                    <div style="margin-top: 28px; padding-top: 18px; border-top: 1px solid #E2E8E2;">
                      <p style="margin: 0; font-size: 13px; line-height: 1.7; color: #9BA89B;">
                        Todos los horarios están expresados en Europe/Madrid. Si la cita cambia de estado o de hora, HERA enviará un nuevo aviso.
                      </p>
                    </div>
                  </td>
                </tr>
              </table>
            </td>
          </tr>
        </table>
      </body>
    </html>
  ",
  "subject": "Tu cita ha sido confirmada · Dra. Elena Martín",
  "text": "Tu cita ya está confirmada

Dra. Elena Martín ha confirmado tu cita. Aquí tienes el resumen actualizado para que llegues con todo claro.

Confirmada

Especialista: Dra. Elena Martín
Fecha: domingo, 10 de mayo de 2026
Hora: 11:30
Duración: 60 minutos
Modalidad: Videollamada
Estado: Confirmada
Zona horaria: Europe/Madrid

Ver detalles de la cita: https://www.health-hera.com/sessions/session-123

Accesos adicionales:
- Abrir videollamada: https://meet.hera.app/session-123

Todos los horarios están expresados en Europe/Madrid. Si la cita cambia de estado o de hora, HERA enviará un nuevo aviso.",
}
`;

exports[`session email templates renders client_session_reminder_24h with a stable reminder summary 1`] = `
{
  "event": "session_reminder_24h",
  "html": "
    <!doctype html>
    <html lang="es">
      <head>
        <meta charset="utf-8" />
        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
        <title>Mañana tienes una cita en HERA</title>
      </head>
      <body style="margin: 0; padding: 0; background: #F5F7F5; font-family: Arial, Helvetica, sans-serif; color: #2C3E2C;">
        <div style="display: none; max-height: 0; overflow: hidden; opacity: 0;">
          Mañana tienes una cita en HERA · domingo, 10 de mayo de 2026
        </div>

        <table role="presentation" width="100%" cellspacing="0" cellpadding="0" style="background: #F5F7F5; padding: 24px 12px;">
          <tr>
            <td align="center">
              <table role="presentation" width="100%" cellspacing="0" cellpadding="0" style="max-width: 640px;">
                <tr>
                  <td style="padding-bottom: 14px; color: #9BA89B; font-size: 12px; letter-spacing: 0.8px; text-transform: uppercase;">
                    HERA
                  </td>
                </tr>
                <tr>
                  <td style="background: #FFFFFF; border: 1px solid #E2E8E2; border-radius: 24px; padding: 28px;">
                    <div style="display: inline-block; padding: 6px 12px; border-radius: 999px; background: #D4DED0; color: #8B9D83; font-size: 12px; font-weight: 700; letter-spacing: 0.3px;">
                      Recordatorio 24h
                    </div>

                    <h1 style="margin: 18px 0 10px; font-size: 30px; line-height: 1.2; color: #2C3E2C;">
                      Mañana tienes una cita en HERA
                    </h1>

                    <p style="margin: 0 0 18px; font-size: 15px; line-height: 1.7; color: #6B7B6B;">
                      Te recordamos que tu cita con Dra. Elena Martín está próxima. Revisa la hora, la modalidad y los accesos necesarios con antelación.
                    </p>

                    <div style="display: inline-block; margin-bottom: 22px; padding: 8px 14px; border-radius: 999px; background: #D4DED0; color: #2C3E2C; border: 1px solid #8B9D83; font-size: 13px; font-weight: 700;">
                      Confirmada
                    </div>

                    <div style="border: 1px solid #E2E8E2; border-radius: 18px; background: #FCFDFC; padding: 18px 20px;">
                      <table role="presentation" width="100%" cellspacing="0" cellpadding="0">
                        
        <tr>
          <td style="padding: 10px 0; color: #6B7B6B; font-size: 13px; width: 34%; vertical-align: top;">
            Especialista
          </td>
          <td style="padding: 10px 0; color: #2C3E2C; font-size: 14px; font-weight: 600; vertical-align: top;">
            Dra. Elena Martín
          </td>
        </tr>
      
        <tr>
          <td style="padding: 10px 0; color: #6B7B6B; font-size: 13px; width: 34%; vertical-align: top;">
            Fecha
          </td>
          <td style="padding: 10px 0; color: #2C3E2C; font-size: 14px; font-weight: 600; vertical-align: top;">
            domingo, 10 de mayo de 2026
          </td>
        </tr>
      
        <tr>
          <td style="padding: 10px 0; color: #6B7B6B; font-size: 13px; width: 34%; vertical-align: top;">
            Hora
          </td>
          <td style="padding: 10px 0; color: #2C3E2C; font-size: 14px; font-weight: 600; vertical-align: top;">
            11:30
          </td>
        </tr>
      
        <tr>
          <td style="padding: 10px 0; color: #6B7B6B; font-size: 13px; width: 34%; vertical-align: top;">
            Duración
          </td>
          <td style="padding: 10px 0; color: #2C3E2C; font-size: 14px; font-weight: 600; vertical-align: top;">
            60 minutos
          </td>
        </tr>
      
        <tr>
          <td style="padding: 10px 0; color: #6B7B6B; font-size: 13px; width: 34%; vertical-align: top;">
            Modalidad
          </td>
          <td style="padding: 10px 0; color: #2C3E2C; font-size: 14px; font-weight: 600; vertical-align: top;">
            Videollamada
          </td>
        </tr>
      
        <tr>
          <td style="padding: 10px 0; color: #6B7B6B; font-size: 13px; width: 34%; vertical-align: top;">
            Estado
          </td>
          <td style="padding: 10px 0; color: #2C3E2C; font-size: 14px; font-weight: 600; vertical-align: top;">
            Confirmada
          </td>
        </tr>
      
        <tr>
          <td style="padding: 10px 0; color: #6B7B6B; font-size: 13px; width: 34%; vertical-align: top;">
            Zona horaria
          </td>
          <td style="padding: 10px 0; color: #2C3E2C; font-size: 14px; font-weight: 600; vertical-align: top;">
            Europe/Madrid
          </td>
        </tr>
      
                      </table>
                    </div>

                    <div style="margin-top: 24px;">
                      <a
                        href="https://www.health-hera.com/sessions/session-123"
                        style="display: inline-block; background: #8B9D83; color: #FFFFFF; padding: 14px 20px; border-radius: 999px; font-size: 14px; font-weight: 700; text-decoration: none;"
                      >
                        Ver detalles de la cita
                      </a>
                    </div>

                    
    <div style="margin-top: 18px;">
      
            <a
              href="https://meet.hera.app/session-123"
              style="display: inline-block; margin-right: 12px; margin-bottom: 10px; color: #B8A8D9; font-size: 13px; font-weight: 600; text-decoration: none;"
            >
              Abrir videollamada
            </a>
          
    </div>
  

                    <div style="margin-top: 28px; padding-top: 18px; border-top: 1px solid #E2E8E2;">
                      <p style="margin: 0; font-size: 13px; line-height: 1.7; color: #9BA89B;">
                        Todos los horarios están expresados en Europe/Madrid. Si la cita cambia de estado o de hora, HERA enviará un nuevo aviso.
                      </p>
                    </div>
                  </td>
                </tr>
              </table>
            </td>
          </tr>
        </table>
      </body>
    </html>
  ",
  "subject": "Recordatorio de cita · Dra. Elena Martín",
  "text": "Mañana tienes una cita en HERA

Te recordamos que tu cita con Dra. Elena Martín está próxima. Revisa la hora, la modalidad y los accesos necesarios con antelación.

Confirmada

Especialista: Dra. Elena Martín
Fecha: domingo, 10 de mayo de 2026
Hora: 11:30
Duración: 60 minutos
Modalidad: Videollamada
Estado: Confirmada
Zona horaria: Europe/Madrid

Ver detalles de la cita: https://www.health-hera.com/sessions/session-123

Accesos adicionales:
- Abrir videollamada: https://meet.hera.app/session-123

Todos los horarios están expresados en Europe/Madrid. Si la cita cambia de estado o de hora, HERA enviará un nuevo aviso.",
}
`;

exports[`session email templates renders specialist_session_cancelled without fake video or location data for phone calls 1`] = `
{
  "event": "session_cancelled",
  "html": "
    <!doctype html>
    <html lang="es">
      <head>
        <meta charset="utf-8" />
        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
        <title>Se ha cancelado una cita</title>
      </head>
      <body style="margin: 0; padding: 0; background: #F5F7F5; font-family: Arial, Helvetica, sans-serif; color: #2C3E2C;">
        <div style="display: none; max-height: 0; overflow: hidden; opacity: 0;">
          Se ha cancelado una cita · domingo, 10 de mayo de 2026
        </div>

        <table role="presentation" width="100%" cellspacing="0" cellpadding="0" style="background: #F5F7F5; padding: 24px 12px;">
          <tr>
            <td align="center">
              <table role="presentation" width="100%" cellspacing="0" cellpadding="0" style="max-width: 640px;">
                <tr>
                  <td style="padding-bottom: 14px; color: #9BA89B; font-size: 12px; letter-spacing: 0.8px; text-transform: uppercase;">
                    HERA
                  </td>
                </tr>
                <tr>
                  <td style="background: #FFFFFF; border: 1px solid #E2E8E2; border-radius: 24px; padding: 28px;">
                    <div style="display: inline-block; padding: 6px 12px; border-radius: 999px; background: #D4DED0; color: #8B9D83; font-size: 12px; font-weight: 700; letter-spacing: 0.3px;">
                      Agenda actualizada
                    </div>

                    <h1 style="margin: 18px 0 10px; font-size: 30px; line-height: 1.2; color: #2C3E2C;">
                      Se ha cancelado una cita
                    </h1>

                    <p style="margin: 0 0 18px; font-size: 15px; line-height: 1.7; color: #6B7B6B;">
                      Lucía Gómez ya no asistirá a la cita programada. Tu agenda se ha actualizado para que puedas reorganizar ese hueco.
                    </p>

                    <div style="display: inline-block; margin-bottom: 22px; padding: 8px 14px; border-radius: 999px; background: #FCEEEA; color: #E89D88; border: 1px solid #E89D88; font-size: 13px; font-weight: 700;">
                      Cancelada
                    </div>

                    <div style="border: 1px solid #E2E8E2; border-radius: 18px; background: #FCFDFC; padding: 18px 20px;">
                      <table role="presentation" width="100%" cellspacing="0" cellpadding="0">
                        
        <tr>
          <td style="padding: 10px 0; color: #6B7B6B; font-size: 13px; width: 34%; vertical-align: top;">
            Paciente
          </td>
          <td style="padding: 10px 0; color: #2C3E2C; font-size: 14px; font-weight: 600; vertical-align: top;">
            Lucía Gómez
          </td>
        </tr>
      
        <tr>
          <td style="padding: 10px 0; color: #6B7B6B; font-size: 13px; width: 34%; vertical-align: top;">
            Fecha
          </td>
          <td style="padding: 10px 0; color: #2C3E2C; font-size: 14px; font-weight: 600; vertical-align: top;">
            domingo, 10 de mayo de 2026
          </td>
        </tr>
      
        <tr>
          <td style="padding: 10px 0; color: #6B7B6B; font-size: 13px; width: 34%; vertical-align: top;">
            Hora
          </td>
          <td style="padding: 10px 0; color: #2C3E2C; font-size: 14px; font-weight: 600; vertical-align: top;">
            11:30
          </td>
        </tr>
      
        <tr>
          <td style="padding: 10px 0; color: #6B7B6B; font-size: 13px; width: 34%; vertical-align: top;">
            Duración
          </td>
          <td style="padding: 10px 0; color: #2C3E2C; font-size: 14px; font-weight: 600; vertical-align: top;">
            60 minutos
          </td>
        </tr>
      
        <tr>
          <td style="padding: 10px 0; color: #6B7B6B; font-size: 13px; width: 34%; vertical-align: top;">
            Modalidad
          </td>
          <td style="padding: 10px 0; color: #2C3E2C; font-size: 14px; font-weight: 600; vertical-align: top;">
            Llamada telefónica
          </td>
        </tr>
      
        <tr>
          <td style="padding: 10px 0; color: #6B7B6B; font-size: 13px; width: 34%; vertical-align: top;">
            Estado
          </td>
          <td style="padding: 10px 0; color: #2C3E2C; font-size: 14px; font-weight: 600; vertical-align: top;">
            Cancelada
          </td>
        </tr>
      
        <tr>
          <td style="padding: 10px 0; color: #6B7B6B; font-size: 13px; width: 34%; vertical-align: top;">
            Zona horaria
          </td>
          <td style="padding: 10px 0; color: #2C3E2C; font-size: 14px; font-weight: 600; vertical-align: top;">
            Europe/Madrid
          </td>
        </tr>
      
                      </table>
                    </div>

                    <div style="margin-top: 24px;">
                      <a
                        href="https://www.health-hera.com/sessions/session-123"
                        style="display: inline-block; background: #8B9D83; color: #FFFFFF; padding: 14px 20px; border-radius: 999px; font-size: 14px; font-weight: 700; text-decoration: none;"
                      >
                        Ver agenda
                      </a>
                    </div>

                    

                    <div style="margin-top: 28px; padding-top: 18px; border-top: 1px solid #E2E8E2;">
                      <p style="margin: 0; font-size: 13px; line-height: 1.7; color: #9BA89B;">
                        Todos los horarios están expresados en Europe/Madrid. Si la cita cambia de estado o de hora, HERA enviará un nuevo aviso.
                      </p>
                    </div>
                  </td>
                </tr>
              </table>
            </td>
          </tr>
        </table>
      </body>
    </html>
  ",
  "subject": "Cita cancelada · Lucía Gómez",
  "text": "Se ha cancelado una cita

Lucía Gómez ya no asistirá a la cita programada. Tu agenda se ha actualizado para que puedas reorganizar ese hueco.

Cancelada

Paciente: Lucía Gómez
Fecha: domingo, 10 de mayo de 2026
Hora: 11:30
Duración: 60 minutos
Modalidad: Llamada telefónica
Estado: Cancelada
Zona horaria: Europe/Madrid

Ver agenda: https://www.health-hera.com/sessions/session-123

Todos los horarios están expresados en Europe/Madrid. Si la cita cambia de estado o de hora, HERA enviará un nuevo aviso.",
}
`;

exports[`session email templates renders specialist_session_requested with in-person details 1`] = `
{
  "event": "session_requested",
  "html": "
    <!doctype html>
    <html lang="es">
      <head>
        <meta charset="utf-8" />
        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
        <title>Tienes una nueva solicitud de cita</title>
      </head>
      <body style="margin: 0; padding: 0; background: #F5F7F5; font-family: Arial, Helvetica, sans-serif; color: #2C3E2C;">
        <div style="display: none; max-height: 0; overflow: hidden; opacity: 0;">
          Tienes una nueva solicitud de cita · domingo, 10 de mayo de 2026
        </div>

        <table role="presentation" width="100%" cellspacing="0" cellpadding="0" style="background: #F5F7F5; padding: 24px 12px;">
          <tr>
            <td align="center">
              <table role="presentation" width="100%" cellspacing="0" cellpadding="0" style="max-width: 640px;">
                <tr>
                  <td style="padding-bottom: 14px; color: #9BA89B; font-size: 12px; letter-spacing: 0.8px; text-transform: uppercase;">
                    HERA
                  </td>
                </tr>
                <tr>
                  <td style="background: #FFFFFF; border: 1px solid #E2E8E2; border-radius: 24px; padding: 28px;">
                    <div style="display: inline-block; padding: 6px 12px; border-radius: 999px; background: #D4DED0; color: #8B9D83; font-size: 12px; font-weight: 700; letter-spacing: 0.3px;">
                      Nueva reserva
                    </div>

                    <h1 style="margin: 18px 0 10px; font-size: 30px; line-height: 1.2; color: #2C3E2C;">
                      Tienes una nueva solicitud de cita
                    </h1>

                    <p style="margin: 0 0 18px; font-size: 15px; line-height: 1.7; color: #6B7B6B;">
                      Lucía Gómez ha solicitado una cita contigo en HERA. Revisa la agenda para confirmar o gestionar la solicitud.
                    </p>

                    <div style="display: inline-block; margin-bottom: 22px; padding: 8px 14px; border-radius: 999px; background: #D4DED0; color: #2C3E2C; border: 1px solid #8B9D83; font-size: 13px; font-weight: 700;">
                      Pendiente de confirmación
                    </div>

                    <div style="border: 1px solid #E2E8E2; border-radius: 18px; background: #FCFDFC; padding: 18px 20px;">
                      <table role="presentation" width="100%" cellspacing="0" cellpadding="0">
                        
        <tr>
          <td style="padding: 10px 0; color: #6B7B6B; font-size: 13px; width: 34%; vertical-align: top;">
            Paciente
          </td>
          <td style="padding: 10px 0; color: #2C3E2C; font-size: 14px; font-weight: 600; vertical-align: top;">
            Lucía Gómez
          </td>
        </tr>
      
        <tr>
          <td style="padding: 10px 0; color: #6B7B6B; font-size: 13px; width: 34%; vertical-align: top;">
            Fecha
          </td>
          <td style="padding: 10px 0; color: #2C3E2C; font-size: 14px; font-weight: 600; vertical-align: top;">
            domingo, 10 de mayo de 2026
          </td>
        </tr>
      
        <tr>
          <td style="padding: 10px 0; color: #6B7B6B; font-size: 13px; width: 34%; vertical-align: top;">
            Hora
          </td>
          <td style="padding: 10px 0; color: #2C3E2C; font-size: 14px; font-weight: 600; vertical-align: top;">
            11:30
          </td>
        </tr>
      
        <tr>
          <td style="padding: 10px 0; color: #6B7B6B; font-size: 13px; width: 34%; vertical-align: top;">
            Duración
          </td>
          <td style="padding: 10px 0; color: #2C3E2C; font-size: 14px; font-weight: 600; vertical-align: top;">
            60 minutos
          </td>
        </tr>
      
        <tr>
          <td style="padding: 10px 0; color: #6B7B6B; font-size: 13px; width: 34%; vertical-align: top;">
            Modalidad
          </td>
          <td style="padding: 10px 0; color: #2C3E2C; font-size: 14px; font-weight: 600; vertical-align: top;">
            Consulta presencial
          </td>
        </tr>
      
        <tr>
          <td style="padding: 10px 0; color: #6B7B6B; font-size: 13px; width: 34%; vertical-align: top;">
            Estado
          </td>
          <td style="padding: 10px 0; color: #2C3E2C; font-size: 14px; font-weight: 600; vertical-align: top;">
            Pendiente de confirmación
          </td>
        </tr>
      
        <tr>
          <td style="padding: 10px 0; color: #6B7B6B; font-size: 13px; width: 34%; vertical-align: top;">
            Zona horaria
          </td>
          <td style="padding: 10px 0; color: #2C3E2C; font-size: 14px; font-weight: 600; vertical-align: top;">
            Europe/Madrid
          </td>
        </tr>
      
        <tr>
          <td style="padding: 10px 0; color: #6B7B6B; font-size: 13px; width: 34%; vertical-align: top;">
            Ubicación
          </td>
          <td style="padding: 10px 0; color: #2C3E2C; font-size: 14px; font-weight: 600; vertical-align: top;">
            Calle Alcalá 14, Madrid, 28014, España
          </td>
        </tr>
      
                      </table>
                    </div>

                    <div style="margin-top: 24px;">
                      <a
                        href="https://www.health-hera.com/sessions/session-123"
                        style="display: inline-block; background: #8B9D83; color: #FFFFFF; padding: 14px 20px; border-radius: 999px; font-size: 14px; font-weight: 700; text-decoration: none;"
                      >
                        Revisar solicitud
                      </a>
                    </div>

                    
    <div style="margin-top: 18px;">
      
            <a
              href="https://maps.google.com/?q=Calle+Alcala+14+Madrid"
              style="display: inline-block; margin-right: 12px; margin-bottom: 10px; color: #B8A8D9; font-size: 13px; font-weight: 600; text-decoration: none;"
            >
              Abrir indicaciones
            </a>
          
    </div>
  

                    <div style="margin-top: 28px; padding-top: 18px; border-top: 1px solid #E2E8E2;">
                      <p style="margin: 0; font-size: 13px; line-height: 1.7; color: #9BA89B;">
                        Todos los horarios están expresados en Europe/Madrid. Si la cita cambia de estado o de hora, HERA enviará un nuevo aviso.
                      </p>
                    </div>
                  </td>
                </tr>
              </table>
            </td>
          </tr>
        </table>
      </body>
    </html>
  ",
  "subject": "Nueva solicitud de cita · Lucía Gómez",
  "text": "Tienes una nueva solicitud de cita

Lucía Gómez ha solicitado una cita contigo en HERA. Revisa la agenda para confirmar o gestionar la solicitud.

Pendiente de confirmación

Paciente: Lucía Gómez
Fecha: domingo, 10 de mayo de 2026
Hora: 11:30
Duración: 60 minutos
Modalidad: Consulta presencial
Estado: Pendiente de confirmación
Zona horaria: Europe/Madrid
Ubicación: Calle Alcalá 14, Madrid, 28014, España

Revisar solicitud: https://www.health-hera.com/sessions/session-123

Accesos adicionales:
- Abrir indicaciones: https://maps.google.com/?q=Calle+Alcala+14+Madrid

Todos los horarios están expresados en Europe/Madrid. Si la cita cambia de estado o de hora, HERA enviará un nuevo aviso.",
}
`;
